Fix edit topic overlap

--- a/src/scss/recit/_treetopics.scss
+++ b/src/scss/recit/_treetopics.scss
@@ -19,6 +19,10 @@ $max-width-responsive-m5: 992px;
     }
 }
 
+h3.sectionname .inplaceeditable.inplaceeditingon .editinstructions{
+    margin-top:-47px;
+}
+
 .tt-contract{
     width: 80%; margin: auto;
 }
